<!--
 Copyright 2020 Google LLC

 Licensed under the Apache License, Version 2.0 (the "License");
 you may not use this file except in compliance with the License.
 You may obtain a copy of the License at

      http://www.apache.org/licenses/LICENSE-2.0

 Unless required by applicable law or agreed to in writing, software
 distributed under the License is distributed on an "AS IS" BASIS,
 WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 See the License for the specific language governing permissions and
 limitations under the License.
-->

<resources>
    <string name="app_name">GoOutside</string>
    <string name="go_outside">Go Outside</string>
    <string name="logo">logo</string>
    <string name="title_activity_dashboard">dashboard</string>
    <string name="title_home">Home</string>
    <string name="title_trophy">Collection</string>
    <string name="title_ar">Camera</string>
    <string name="search_title">Search</string>
    <string name="search_for_adventures">Search for adventures…</string>
    <string name="lets_go_exp">Lets Go Explore!</string>
    <string name="image">image</string>
    <string name="my_collection">My Collection</string>
</resources>
